--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "My personal portfolio website.",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "keywords": ["portfolio", "website", "express"],
-  "author": "Your Name",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.1.0"
   }
 }
