--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ahmad Yehya's Portfolio Website with Home Server Project",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["portfolio", "express", "ejs", "home-server", "networking"],
+  "author": "Ahmad Yehya",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.10",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "ejs": "^3.1.10"
   }
 }
